--- a/frontend/src/components/LandingPage/index.css
+++ b/frontend/src/components/LandingPage/index.css
@@ -1,3 +1,37 @@
-.caption{
+.landing-content{
     padding: 0 60px;
+}
+.hero-title{
+    /* line-height: 20vh; */
+    font-size: 30px;
+    font-weight: 700;
+    
+}
+
+
+
+.landing-page-img{
+    width: 45vw;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.body-3{
+    display: flex;
+    flex-direction: column;
+}
+
+
+@media screen and (min-width: 768px) {
+    .hero-title{
+        line-height: 11vh;
+        font-size: 60px;
+        font-weight: 700;
+    }
+    .body-3{
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 10px;
+    }
+
 }
